[tool.poetry]
name = "pocketgram"
version = "0.1.0"
description = "RPG para Telegram"
authors = ["Edson Cristovam <pg2006pe@hotmail.com>"]
license = "GNU V3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.1 <3.11.0"


[tool.poetry.group.dev.dependencies]
autopep8 = "2.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
