[tool.poetry]
name = "pocketgram"
version = "0.1.0"
description = "RPG para Telegram"
authors = ["Edson Cristovam <pg2006pe@hotmail.com>"]
license = "GNU V3"
readme = "README.md"


[tool.poetry.dependencies]
pillow = "12.0.0"
pymongo = "4.3.3"
python = "^3.10.1 <3.11.0"
python-decouple = "3.8"
python-telegram-bot = {version = "21.10", extras = ["job-queue"]}
pytz = "2015.2"


[tool.poetry.group.dev.dependencies]
autopep8 = "2.3.1"
pytest = "8.3.5"
flake8 = "7.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
